--- a/PMC-Desktop/PMC-Desktop.csproj
+++ b/PMC-Desktop/PMC-Desktop.csproj
@@ -48,16 +48,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ADS.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="formPMC.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="formPMC.Designer.cs">
+      <DependentUpon>formPMC.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="formPMC.resx">
+      <DependentUpon>formPMC.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
