--- a/PMC-Desktop/PMC-Desktop.csproj
+++ b/PMC-Desktop/PMC-Desktop.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>PMC_Desktop</RootNamespace>
     <AssemblyName>PMC-Desktop</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
@@ -86,13 +86,30 @@
     <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Antlr3.Runtime, Version=3.5.0.2, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
+      <HintPath>packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
+    </Reference>
     <Reference Include="CircularProgressBar, Version=2.8.0.16, Culture=neutral, PublicKeyToken=310fd07b25df79b3, processorArchitecture=MSIL">
       <HintPath>packages\CircularProgressBar.2.8.0.16\lib\net40\CircularProgressBar.dll</HintPath>
     </Reference>
+    <Reference Include="ExpressionEvaluator, Version=2.0.4.0, Culture=neutral, PublicKeyToken=90d9f15d622e2348, processorArchitecture=MSIL">
+      <HintPath>packages\ExpressionEvaluator.2.0.4.0\lib\net40\ExpressionEvaluator.dll</HintPath>
+    </Reference>
+    <Reference Include="GSF.Core, Version=2.3.302.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\GSF.Core.2.3.302\lib\net46\GSF.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="GSF.Security, Version=2.3.302.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\GSF.Security.2.3.302\lib\net46\GSF.Security.dll</HintPath>
+    </Reference>
+    <Reference Include="GSF.Windows, Version=2.3.302.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\GSF.Windows.2.3.302\lib\net46\GSF.Windows.dll</HintPath>
+    </Reference>
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices" />
+    <Reference Include="System.DirectoryServices.AccountManagement" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -121,6 +138,12 @@
     <Compile Include="formProgress.Designer.cs">
       <DependentUpon>formProgress.cs</DependentUpon>
     </Compile>
+    <Compile Include="InputBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InputBox.Designer.cs">
+      <DependentUpon>InputBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="Plexiglass.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -134,6 +157,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="formProgress.resx">
       <DependentUpon>formProgress.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="InputBox.resx">
+      <DependentUpon>InputBox.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Plexiglass.resx">
       <DependentUpon>Plexiglass.cs</DependentUpon>
