--- a/PMC-Desktop/packages.config
+++ b/PMC-Desktop/packages.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="CircularProgressBar" version="2.8.0.16" targetFramework="net472" />
+  <package id="ExpressionEvaluator" version="2.0.4.0" targetFramework="net472" />
+  <package id="GSF.Core" version="2.3.302" targetFramework="net472" />
+  <package id="GSF.Security" version="2.3.302" targetFramework="net472" />
+  <package id="GSF.Windows" version="2.3.302" targetFramework="net472" />
+  <package id="ModernMessageBoxLib" version="1.3.0" targetFramework="net472" />
   <package id="WinFormAnimation" version="1.6.0.4" targetFramework="net472" />
 </packages>
