--- a/PMC-Desktop/App.config
+++ b/PMC-Desktop/App.config
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source = |SQL/CE|"/>
+    <add name="DefaultConnection" connectionString="Data Source = |SQL/CE|" />
+    <add name="DefaultConnection1" connectionString="Data Source = |SQL/CE|" />
   </connectionStrings>
   <runtime>
-    <AppContextSwitchOverrides value="Switch.System.Reflection.DoNotForceOrderOfConstructors=true"/>
+    <AppContextSwitchOverrides value="Switch.System.Reflection.DoNotForceOrderOfConstructors=true" />
   </runtime>
 </configuration>
