--- a/PMC-Desktop/packages.config
+++ b/PMC-Desktop/packages.config
@@ -3,8 +3,13 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="CircularProgressBar" version="2.8.0.16" targetFramework="net472" />
   <package id="IPrompt" version="1.0.1" targetFramework="net472" />
+  <package id="Markdig" version="0.20.0" targetFramework="net472" />
   <package id="ModernMessageBoxLib" version="1.3.0" targetFramework="net472" />
   <package id="Ookii.Dialogs" version="1.0" targetFramework="net472" />
   <package id="Ookii.Dialogs.WinForms" version="1.1.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
   <package id="WinFormAnimation" version="1.6.0.4" targetFramework="net472" />
 </packages>
