--- a/PMC-Desktop/PMC-Desktop.csproj
+++ b/PMC-Desktop/PMC-Desktop.csproj
@@ -149,6 +149,12 @@
     <Compile Include="Changelog.Designer.cs">
       <DependentUpon>Changelog.cs</DependentUpon>
     </Compile>
+    <Compile Include="formEditUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formEditUser.Designer.cs">
+      <DependentUpon>formEditUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="formPMC.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -177,6 +183,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Changelog.resx">
       <DependentUpon>Changelog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="formEditUser.resx">
+      <DependentUpon>formEditUser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="formPMC.resx">
       <DependentUpon>formPMC.cs</DependentUpon>
