--- a/PMC-Desktop/PMC-Desktop.csproj
+++ b/PMC-Desktop/PMC-Desktop.csproj
@@ -149,6 +149,12 @@
     <Compile Include="Changelog.Designer.cs">
       <DependentUpon>Changelog.cs</DependentUpon>
     </Compile>
+    <Compile Include="EmailBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EmailBox.Designer.cs">
+      <DependentUpon>EmailBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="formEditUser.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -183,6 +189,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Changelog.resx">
       <DependentUpon>Changelog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EmailBox.resx">
+      <DependentUpon>EmailBox.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="formEditUser.resx">
       <DependentUpon>formEditUser.cs</DependentUpon>
