--- a/PMC-Desktop/PMC-Desktop.csproj
+++ b/PMC-Desktop/PMC-Desktop.csproj
@@ -155,6 +155,12 @@
     <Compile Include="EmailBox.Designer.cs">
       <DependentUpon>EmailBox.cs</DependentUpon>
     </Compile>
+    <Compile Include="formConfirmEdit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formConfirmEdit.Designer.cs">
+      <DependentUpon>formConfirmEdit.cs</DependentUpon>
+    </Compile>
     <Compile Include="formEditUser.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -192,6 +198,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="EmailBox.resx">
       <DependentUpon>EmailBox.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="formConfirmEdit.resx">
+      <DependentUpon>formConfirmEdit.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="formEditUser.resx">
       <DependentUpon>formEditUser.cs</DependentUpon>
